<resources>
    <string name="app_name">TheMovieFan</string>

    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_favorites">Favorites</string>
    <string name="navigation_drawer_watchlist">Watchlist</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="navigation_drawer_login">Login</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_register">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_profile">ProfileActivity</string>


</resources>
